assets/configurations/app-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-hello
  namespace: bdp-app-hello
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app-hello

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-hello
  namespace: bdp-app-hello
  labels:
    app: app-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-hello
  template:
    metadata:
      labels:
        app: app-hello
    spec:
      containers:
        - name: app-hello
          image: bdpsam443/app-hello:1.0
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 384Mi
          ports:
            - containerPort: 80
