assets/configurations/ingress-route.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: http-ingress
    namespace: bdp-app-hello
    resourceVersion: "2382863"
    uid: b81e0345-7cb5-4b32-ab00-2b37bdb1d52d
    annotations:
      nginx.ingress.kubernetes.io/proxy-body-size: 20m
      nginx.ingress.kubernetes.io/service-upstream: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
      nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
      nginx.ingress.kubernetes.io/hsts: "max-age=31536000; includeSubDomains; preload"
      nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers "Content-Security-Policy: default-src 'self'; script-src 'self' 'unsafe-inline';"
        more_set_headers "X-Content-Type-Options: nosniff";
        more_set_headers "X-Frame-Options: SAMEORIGIN";
        more_set_headers "X-Xss-Protection: 1; mode=block";
        more_set_headers "Cache-Control: must-revalidate";
        more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
        more_set_headers "Cross-Origin-Resource-Policy: same-site";
        more_clear_headers "Cache-Control";
  spec:
    ingressClassName: public
    rules:
    - host: desapphello.bdp.com.bo #Nombre del host
      http:
        paths:
        - backend:
            service:
              name: service-app-hello
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - secretName: bdpcomsecret-tls
  status:
    loadBalancer:
      ingress:
      - ip: 127.0.0.1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
